fix(#1472): hide scrollbar in scrollable components (#1490)
This PR hides the scrollbar in all browsers without affecting the behavior

Closes #1472

(cherry picked from commit 999897aac24fbcae02a9ad1ad462ae30ee158963)

--- a/frontend/assets/scss/abstract/placeholders/_placeholders.scss
+++ b/frontend/assets/scss/abstract/placeholders/_placeholders.scss
@@ -221,3 +221,12 @@
     }
   }
 }
+%hide-scrollbar {
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
